src/modules/account/components/MaterialRequestEvaluatorOptions/MaterialRequestEvaluatorOptions.module.scss
@use "../../../../styles/abstracts" as *;

.p-material-request-detail-evaluator-options {
	display: flex;
	flex-direction: column;
	padding: $spacer-sm;
	background-color: $white;
	gap: $spacer-sm;

	@media (max-width: $breakpoint-md) {
		padding: 0;
	}

	&__title {
		font-weight: $font-weight-bold;
		display: block;
	}

	&__description {
		display: block;
	}

	&__button {
		display: flex;
		background-color: $white;
		border: 1px solid $silver;
		border-left: $spacer-xs solid $silver;
		padding: $spacer-sm;
		font-size: $font-size-base;
		font-weight: $font-weight-normal;
		text-align: left;
		border-radius: .65rem;
		color: $neutral;
		outline: none;

		&::after{
			font-size: $font-size-lg;
			content: "angle-right";
			align-self: center;
			padding-left: $spacer-xs;
			margin-left: auto;

			// Enable Ligatures
			font-feature-settings: "liga";
			font-variant-ligatures: discretionary-ligatures;
			letter-spacing: 0;

			// Better Font Rendering
			-webkit-font-smoothing: antialiased;
			-moz-osx-font-smoothing: grayscale;
			font-family: $font-family-icons-light;
			color: $black;
		}

		:global(.c-button__content) {
			display: block;
		}

		&-title {
			display: block;
			align-items: center;
			padding-bottom: $spacer-xxs;
			white-space: normal;
			font-size: $font-size-base;
			line-height: $font-size-lg;
			color: $black;
		}

		&-icon {
			border-radius: 50%;
			padding: .25rem;
			color: white;
			width: fit-content;
			height: fit-content;
			margin-right: $spacer-xs;
		}

		&-description {
			display: block;
			font-style: italic;
			white-space: normal;
			font-size: $font-size-base;
			line-height: $font-size-2xm;
			color: $shade;
		}

		&:global(:hover:not(:disabled)) {
			color: $black;

			.p-material-request-detail-evaluator-options__button {
				&-title {
					font-weight: $font-weight-bold;
				}
			}
		}

		&:global(:hover) {
			background-color: $white;
		}

		&:global(:disabled) {
			opacity: 0.6;
		}

		&-approve {
			border-left-color: $seagreen;

			.p-material-request-detail-evaluator-options__button-icon{
				background-color: $seagreen;
			}

			&:global(:hover) {
				border-color: $seagreen;
			}
		}

		&-additional-conditions {
			border-left-color: $mustard;

			.p-material-request-detail-evaluator-options__button-icon{
				background-color: $mustard;
			}

			&:global(:hover) {
				border-color: $mustard;
			}
		}

		&-deny {
			border-left-color: $cherry-light;

			.p-material-request-detail-evaluator-options__button-icon{
				background-color: $cherry-light;
			}

			&:global(:hover) {
				border-color: $cherry-light;
			}
		}
	}
}

